--- a/k8s/storage.yaml
+++ b/k8s/storage.yaml
@@ -9,6 +9,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -21,6 +23,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -33,6 +37,8 @@ spec:
   resources:
     requests:
       storage: 5Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -45,6 +51,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -57,6 +65,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -69,6 +79,8 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -81,3 +93,5 @@ spec:
   resources:
     requests:
       storage: 5Gi
+  storageClassName: local-storage
+  volumeMode: Filesystem
