--- a/helm/templates/elasticsearch.yaml
+++ b/helm/templates/elasticsearch.yaml
@@ -26,6 +26,7 @@ metadata:
     {{- include "ragflow.labels" . | nindent 4 }}
     app.kubernetes.io/component: elasticsearch
 spec:
+  serviceName: {{ include "ragflow.fullname" . }}-es
   replicas: 1
   selector:
     matchLabels:
