--- a/helm/templates/minio.yaml
+++ b/helm/templates/minio.yaml
@@ -28,6 +28,7 @@ metadata:
   annotations:
     checksum/config: {{ include (print $.Template.BasePath "/env.yaml") . | sha256sum }}
 spec:
+  serviceName: {{ include "ragflow.fullname" . }}-minio
   replicas: 1
   selector:
     matchLabels:
