--- a/k8s/storage.yaml
+++ b/k8s/storage.yaml
@@ -11,6 +11,7 @@ spec:
       storage: 10Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: mysql-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -25,6 +26,7 @@ spec:
       storage: 10Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: minio-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -39,6 +41,7 @@ spec:
       storage: 5Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: redis-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -53,6 +56,7 @@ spec:
       storage: 10Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: elasticsearch-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -67,6 +71,7 @@ spec:
       storage: 10Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: infinity-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -81,6 +86,7 @@ spec:
       storage: 10Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: opensearch-pv
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -95,3 +101,4 @@ spec:
       storage: 5Gi
   storageClassName: ragflow-local-storage
   volumeMode: Filesystem
+  volumeName: ragflow-logs-pv
